# cnp-reporter

./: .gitignore  index.html  map.js  styles.css  todo.md
.github/workflows/: build-release-server.yml
api-server/: Cargo.toml  Dockerfile  sqlite.db  sqlite.db-shm  sqlite.db-wal
api-server/.sqlx/: query-f4fa67df15bf3fb631183d62d2c957227631f7358b9b67edee723fd3e40038e3.json
api-server/migrations/: 20240508141931_images.sql  20240508141932_locations.sql
api-server/src/: main.rs
static-site/: index.html  map.js  privacy-policy.html  report.html  styles.css  team.html
static-site/scripts/: report.js
static-site/styles/: common.css  home.css  mvp.css  report.css  team.css
